[package]
name = "sampler"
version = "0.1.0"
authors = ["greym0uth <thejadenjack@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.1", default-features = false }
anyhow = "1.0.75"
embedded-sdmmc = { git = "https://github.com/AnyTimeTraveler/embedded-sdmmc-rs.git", branch = "update-embedded-hal" }
embedded-hal = "0.2.7"
esp-idf-hal = "0.42.1"
chrono = "0.4.31"

[build-dependencies]
embuild = "0.31.3"
